# account-management/customer-service/src/main/resources/config/swagger.json
@@ -1,37 +1,34 @@
-{"basePath": "/v1","paths":{"/toaccounts/{customerId}/{accountId}":{"delete":{"description": "Delete an account from customer link","operationId": "deleteById","responses":{"400": {
-                        "description": "Invalid ID supplied"
-                    },"404": {
-                        "description": "account not found"
-                    }},"security": [
-                    {
-                        "customer_auth": [
-                            "customer.r", "customer.w"
-                        ]
-                    }
-                ],"parameters": [
-                    {
-                        "name": "customerId",
-                        "in": "path",
-                        "description": "ID of taccountodo",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "accountId",
-                        "in": "path",
-                        "description": "ID of taccountodo",
-                        "required": true,
-                        "type": "string"
-                    }
-                ]}},"/health":{"get":{"responses":{"200":{"description":"successful operation"}},"parameters":[]}},"/createcustomer":{"post":{"description": "Return a customer object with Id","operationId": "createCustomerPost","responses":{"200":{"schema": {
-                      "$ref": "#/definitions/CustomerResponse"
-                },"description": "OK"}},"security": [
-                    {
-                        "customer_auth": [
-                            "customer.w"
-                        ]
-                    }
-                ],"parameters": [
+{
+    "swagger": "2.0",
+    "info": {
+        "version": "1.0.0",
+        "title": "Account Money transfer customer command service API",
+        "description": "Account Money transfer command service API is a microserice that serves customer command side endpoints for the Account Money transfer example application built on top of light-eventuate.",
+        "contact": {
+            "email": "stevehu@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        }
+    },
+    "host": "accounttransfer.networknt.com",
+    "schemes": [
+        "http"
+    ],
+    "basePath": "/v1",
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
+    "paths": {
+        "/createcustomer": {
+            "post": {
+                "description": "Return a customer object with Id",
+                "operationId": "createCustomerPost",
+                "parameters": [
                   {
                     "in": "body",
                     "name": "request",
@@ -40,15 +37,29 @@
                     "schema": {
                         "$ref": "#/definitions/CustomerInfo"                     }
                    }
-                  ]}},"/customers/toaccounts/{id}":{"post":{"description": "addToAccount","operationId": "addToAccountUsingPOST","responses":{"200":{"schema": {
-              "type": "string"
-            },"description": "OK"}},"security": [
-              {
-                  "customer_auth": [
-                      "customer.r", "customer.w"
-                   ]
-             }
-          ],"parameters": [
+                  ],
+               "responses": {
+                   "200": {
+                   "description": "OK",
+                   "schema": {
+                      "$ref": "#/definitions/CustomerResponse"
+                }
+               }
+              },
+             "security": [
+                    {
+                        "customer_auth": [
+                            "customer.w"
+                        ]
+                    }
+                ]
+            }
+     },
+     "/customers/toaccounts/{id}": {
+       "post": {
+        "description": "addToAccount",
+        "operationId": "addToAccountUsingPOST",
+        "parameters": [
           {
             "name": "id",
             "in": "path",
@@ -65,26 +76,75 @@
               "$ref": "#/definitions/ToAccountInfo"
             }
           }
-        ]}},"/server/info":{"get":{"security":[{"customer_auth":["server.info.r"]}],"responses":{"200":{"description":"successful operation"}},"parameters":[]}}},"host": "accounttransfer.networknt.com","produces": [
-        "application/json"
-    ],"schemes": [
-        "http"
-    ],"securityDefinitions":{"customer_auth":{"scopes":{"customer.w": "write customer","server.info.r":"read server info","customer.r": "read customer"},"type": "oauth2","authorizationUrl": "http://localhost:8080/oauth2/code","flow": "implicit"}},"definitions":{"ToAccountInfo": {
-      "properties": {
-        "description": {
-          "type": "string"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "string"
+            }
+          }
         },
-        "id": {
-          "type": "string"
-        },
-        "owner": {
-          "type": "string"
-        },
-        "title": {
-          "type": "string"
-        }
+         "security": [
+              {
+                  "customer_auth": [
+                      "customer.r", "customer.w"
+                   ]
+             }
+          ]
       }
-    },"CustomerInfo": {
+    },
+     "/toaccounts/{customerId}/{accountId}": {
+         "delete": {
+                "description": "Delete an account from customer link",
+                "operationId": "deleteById",
+                "parameters": [
+                    {
+                        "name": "customerId",
+                        "in": "path",
+                        "description": "ID of taccountodo",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "accountId",
+                        "in": "path",
+                        "description": "ID of taccountodo",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "account not found"
+                    }
+                },
+                "security": [
+                    {
+                        "customer_auth": [
+                            "customer.r", "customer.w"
+                        ]
+                    }
+                ]
+            }
+        }
+    },
+    "securityDefinitions": {
+        "customer_auth": {
+            "type": "oauth2",
+            "authorizationUrl": "http://localhost:8080/oauth2/code",
+            "flow": "implicit",
+            "scopes": {
+                "customer.w": "write customer",
+                 "customer.r": "read customer"
+            }
+        }
+    },
+    "definitions": {
+      "CustomerInfo": {
         "properties": {
           "address": {
             "$ref": "#/definitions/Address"
@@ -102,7 +162,18 @@
               "type": "string"
           }
         }
-      },"Address": {
+      },
+     "Name": {
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        }
+      }
+    },
+    "Address": {
       "properties": {
         "city": {
           "type": "string"
@@ -120,16 +191,24 @@
           "type": "string"
         }
       }
-    },"Name": {
+    },
+    "ToAccountInfo": {
       "properties": {
-        "firstName": {
+        "description": {
           "type": "string"
         },
-        "lastName": {
+        "id": {
+          "type": "string"
+        },
+        "owner": {
+          "type": "string"
+        },
+        "title": {
           "type": "string"
         }
       }
-    },"CustomerResponse": {
+    },
+      "CustomerResponse": {
         "properties": {
           "customerInfo": {
             "$ref": "#/definitions/CustomerInfo"
@@ -138,17 +217,6 @@
             "type": "string"
           }
         }
-      }},"swagger": "2.0","info": {
-        "version": "1.0.0",
-        "title": "Account Money transfer customer command service API",
-        "description": "Account Money transfer command service API is a microserice that serves customer command side endpoints for the Account Money transfer example application built on top of light-eventuate.",
-        "contact": {
-            "email": "stevehu@gmail.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        }
-    },"consumes": [
-        "application/json"
-    ]}
+      }
+    }
+}
